20221007 hover css 적용, 개발 페이지 생성

--- a/html/header.html
+++ b/html/header.html
@@ -1,7 +1,31 @@
 <div class="header">
   <div class="header-left">
-    <img class="menu-icon" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&w=undefined&q=75" />
-    <img class="logo-icon" src="../image/logo.png" />
+    <div class="dropdown">
+      <img class="menu-icon" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ficon-menu.png&w=undefined&q=75" />
+      <div class="menu-dropdown">
+        <a class="menu-list" id="list-all" href="#">직군 전체</a>
+        <a class="menu-list" href="./develop.html">개발</a>
+        <a class="menu-list" href="#">경영·비즈니스</a>
+        <a class="menu-list" href="#">마케팅·광고</a>
+        <a class="menu-list" href="#">디자인</a>
+        <a class="menu-list" href="#">영업</a>
+        <a class="menu-list" href="#">고객서비스·리테일</a>
+        <a class="menu-list" href="#">게임 제작</a>
+        <a class="menu-list" href="#">HR</a>
+        <a class="menu-list" href="#">미디어</a>
+        <a class="menu-list" href="#">엔지니어링·설계</a>
+        <a class="menu-list" href="#">금융</a>
+        <a class="menu-list" href="#">제조·생산</a>
+        <a class="menu-list" href="#">물류·무역</a>
+        <a class="menu-list" href="#">의료·제약·바이오</a>
+        <a class="menu-list" href="#">교육</a>
+        <a class="menu-list" href="#">식·음료</a>
+        <a class="menu-list" href="#">법률·법집행기관</a>
+        <a class="menu-list" href="#">건설·시설</a>
+        <a class="menu-list" href="#">공공·복지</a>
+      </div>
+    </div>
+    <a href="./main.html"><img class="logo-icon" src="../image/logo.png" /></a>
   </div>
   <ul class="header-center">
     <li class="menu">채용</li>
@@ -29,7 +53,7 @@
       <button class="menu">회원가입/로그인</button>
     </li>
     <li>
-      <a class="corp-service">기업 서비스</a>
+      <a href="#" class="corp-service">기업 서비스</a>
     </li>
   </ul>
 </div>
