--- a/html/develop.html
+++ b/html/develop.html
@@ -10,6 +10,7 @@
     <link href="../css/whole.css" rel="stylesheet" />
     <link href="../css/header.css" rel="stylesheet" />
     <link href="../css/footer.css" rel="stylesheet" />
+    <link href="../css/develop.css" rel="stylesheet" />
   </head>
   <body>
     <div class="page">
@@ -18,7 +19,58 @@
           loadHTML("header.html");
         </script>
       </header>
-      <main></main>
+      <main>
+        <div class="section1">
+          <div class="section1-grid">
+            <button class="job-group">
+              <p class="job-group-title">개발</p>
+              <span class="more-btn" role="button" aria-label="popup navigation button">
+                <svg xmlns="https://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" style="margin-top: 7px"><path fill="#767676" fill-rule="nonzero" d="M2.28 3.22a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l4.25-4.25a.75.75 0 0 0-1.06-1.06L6 6.94 2.28 3.22z"></path></svg>
+              </span>
+            </button>
+            <button class="job-category">
+              <p class="job-group-title">개발 전체</p>
+              <span class="more-btn" role="button" aria-label="popup navigation button">
+                <svg xmlns="https://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" style="margin-top: 7px"><path fill="#767676" fill-rule="nonzero" d="M2.28 3.22a.75.75 0 0 0-1.06 1.06l4.25 4.25a.75.75 0 0 0 1.06 0l4.25-4.25a.75.75 0 0 0-1.06-1.06L6 6.94 2.28 3.22z"></path></svg>
+              </span>
+            </button>
+          </div>
+          <div class="section1-grid1">
+            <button class="filter-btn">
+              <span class="filter-title">지역</span>
+              <span class="btn-display">한국</span>
+            </button>
+            <button class="filter-btn">
+              <span class="filter-title">경력</span>
+              <span class="btn-display">전체</span>
+              <svg width="8" height="7" viewBox="0 0 8 7" fill="none" xmlns="https://www.w3.org/2000/svg"><path d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z" fill="#333333"></path></svg>
+            </button>
+            <button class="filter-btn">
+              <span class="filter-title">기술스택</span>
+              <svg width="8" height="7" viewBox="0 0 8 7" fill="none" xmlns="https://www.w3.org/2000/svg"><path d="M7.33334 0.494202C7.85691 0.494202 8.14842 1.1611 7.82205 1.61224L4.50038 6.20371C4.25071 6.54882 3.77503 6.54971 3.5243 6.20554L0.179295 1.61408C-0.149094 1.16332 0.14211 0.494202 0.666672 0.494202H7.33334Z" fill="#333333"></path></svg>
+            </button>
+          </div>
+          <hr width="1060px" color="#ececec" />
+          <div class="slick-list">
+            <div>
+              <button>
+                <span>연봉이 최고의 복지</span>
+                <img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Ftags%2F634f02e0-9f6e-11ec-b909-0242ac120002.png&amp;w=50&amp;q=75" />
+              </button>
+            </div>
+          </div>
+        </div>
+        <hr width="100%" color="#ececec" />
+        <div class="section2">
+          <div class="bookmark">
+            <svg width="11" height="16" viewBox="0 0 13 17" style="color:#36f"><defs><path id="bookmarkIconFill" d="M6.25 13.21L.905 16.22c-.403.228-.905-.06-.905-.517V.596C0 .267.27 0 .605 0h11.29c.334 0 .605.267.605.596v15.107c0 .458-.502.745-.905.518L6.25 13.209z"></path></defs><g fill="none" fill-rule="evenodd" transform="translate(.188)"><use fill="currentColor" xlink:href="#bookmarkIconFill"></use></g></svg>
+            <span>
+              북마크 모아보기 >
+            </span>
+          </div>
+          <h3>적극 채용 중인 회사</h3>
+        </div>
+      </main>
       <footer>
         <script>
           loadHTML("footer.html");
