--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
-  <div class="company-info">
+  <div class="company-menu">
     <div class="info-left">
       <img class="company-logo" src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Flogo_wanted_black.png&amp;w=110&amp;q=100" alt="wanted" />
       <a class="info-btn">기업소개</a>
@@ -18,8 +18,14 @@
       <a href="https://play.google.com/store/apps/details?id=com.wanted.android.wanted" class="sns-link" aria-label="" target="_blank" rel="noopener noreferrer"><img src="https://image.wanted.co.kr/optimize?src=https%3A%2F%2Fstatic.wanted.co.kr%2Fimages%2Fuserweb%2Fsocial_google.png&amp;w=17&amp;q=100" alt="google" /></a>
     </div>
   </div>
-  <hr width="1060px" color="#ececec" />
-  <div>
-    <p id="footer-text">(주)원티드랩 (대표이사:이복기) | 서울특별시 송파구 올림픽로 300 롯데월드타워 35층 | 통신판매번호 : 2020-서울송파-3147 유료직업소개사업등록번호 : (국내) 제2020-3230259-14-5-00018호 | (국외) 서울동부-유-2020-2 | 사업자등록번호 : 299-86-00021 | 02-539-7118 © Wantedlab, Inc.</p>
+  <hr width="1060px" color="#ececec"/>
+  <div id="company-info">
+    <p id="footer-text">(주)원티드랩 (대표이사:이복기) | 서울특별시 송파구 올림픽로 300 롯데월드타워 35층 | 통신판매번호 : 2020-서울송파-3147<br> 유료직업소개사업등록번호 : (국내) 제2020-3230259-14-5-00018호 | (국외) 서울동부-유-2020-2 | 사업자등록번호 : 299-86-00021 | 02-539-7118 © Wantedlab, Inc.</p>
+    <select id="select_btn">
+      <option>한국 (한국어)</option>
+      <option>日本 (日本語)</option>
+      <option>Worldwide (English)</option>
+      <option>Singapore (English)</option>
+  </select>
   </div>
 </div>
