--- a/html/main.html
+++ b/html/main.html
@@ -36,7 +36,7 @@
         <div class="section2">
           <div id="section2-grid1">
             <h2>나에게 필요한 커리어 인사이트</h2>
-            <button onclick="onDisplay('mini-popup')" id="question-btn" type="button">
+            <button onclick="onDisplay('mini-popup')" id="question-button" type="button">
               <svg width="24" height="24" class="" viewBox="0 0 17 17">
                 <defs>
                   <filter id="bfoh3u0w3a"><feColorMatrix in="SourceGraphic" values="0 0 0 0 0.600000 0 0 0 0 0.600000 0 0 0 0 0.600000 0 0 0 1.000000 0"></feColorMatrix></filter>
@@ -68,20 +68,30 @@
               <div id="mini-popup-comment">커리어 인사이트, 이제 따로 찾지 말고 원티드에서 만나보세요! 검증된 IT업계 전문가들이 다양한 채널에서 생산하는 커리어 콘텐츠를 선별해서 관심 태그 기반으로 제공해 드립니다.</div>
             </div>
           </div>
-          <div class="scroll">
-            <button>IT/기술</button>
-            <button>취업/이직</button>
-            <button>회사생활</button>
-            <button>리더십</button>
-            <button>커리어고민</button>
-            <button>인간관계</button>
-            <button>라이프스타일</button>
-            <button>조직문화</button>
-            <button>브랜딩</button>
-            <button>데이터</button>
-            <button>서비스기획</button>
-            <button>개발</button>
-            <button>디자인</button>
+          <div>
+            <div class="scroll">
+              <button>IT/기술</button>
+              <button>취업/이직</button>
+              <button>회사생활</button>
+              <button>리더십</button>
+              <button>커리어고민</button>
+              <button>인간관계</button>
+              <button>라이프스타일</button>
+              <button>조직문화</button>
+              <button>브랜딩</button>
+              <button>데이터</button>
+              <button>서비스기획</button>
+              <button>개발</button>
+              <button>디자인</button>
+            </div>
+            <div class="scroll-button">
+              <div class="prev">
+                <button><</button>
+              </div>
+              <div class="next">
+                <button>></button>
+              </div>
+            </div>
           </div>
           <ul class="career-list">
             <li>
